many things changed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,9 @@
       {% include footer.html %}
 
     </div>
-
+    {% if page.title == 'Projets' %}
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    {% endif %}
   </body>
 
 </html>
