--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -22,12 +22,13 @@
 .site-logo {
   width: 3rem;
   height: 3rem;
+  border-radius: 2rem;
 }
 
 .site-nav {
   display: flex;
   justify-content: center;
-  font-family: "Lato", serif;
+  font-family: serif;
   font-size: 1.1rem;
 }
 
@@ -80,6 +81,7 @@
     margin-left: $spacer0;
     width: 3.5rem;
     height: 3.5rem;
+    border-radius: 2rem;
   }
 
   .site-nav {
