--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,13 +6,20 @@ layout: default
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
     <time class="post-date" datetime="{{ page.date }}">
-        {% assign d = post.date | date: "%-d" %}
-        {% assign m = post.date | date: "%B" %}
+        {% assign m = post.date | date: "%b" %}
         {% case m %}
-          {% when 'April' or 'May' or 'June' %}Printemps
-          {% when 'July' or 'August' or 'September' %}Été
-          {% when 'October' or 'Npvember' or 'December' %}Automne
-          {% when 'January' or 'February' or 'March' %}Hiver
+          {% when 'April' %}Printemps
+          {% when 'May'  %}Printemps
+          {% when 'June' %}Printemps
+          {% when 'July' %}Été
+          {% when 'August' %}Été
+          {% when 'September' %}Été
+          {% when 'October' %}Automne
+          {% when 'November' %}Automne
+          {% when 'December' %}Automne
+          {% when 'January'  %}Hiver
+          {% when 'February' %}Hiver
+          {% when 'March' %}Hiver
           {% else %}{{ post.date | date: "%b" }}.
           {% endcase %}
         {{ post.date | date: "%Y" }}
